--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Ignore the sample file for tests without Biotite installation
+# Ignore the sample file for tests without installation
 /test.py
 
 # Ignore the distribution directories
@@ -23,7 +23,7 @@ htmlcov
 *.py-e
 
 # Ignore potential directory created during install
-biotite.egg-info
+*.egg-info
 
 # Ignore IntelliJ IDEA directory and project files
 .idea
