--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ scikit-image = ">= 0.17"
 pytest = "^5.2"
 sphinx = "^3.0"
 numpydoc = ">= 0.8"
+matplotlib = "^2.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
