--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,18 @@ matrix:
   include:
   - os: linux
     dist: trusty
-    sudo: false
     python: "3.6"
+    env:
       - COMPLETE=false
   - os: linux
     dist: trusty
-    sudo: false
     python: "3.7"
+    env:
       - COMPLETE=false
   - os: linux
     dist: trusty
-    sudo: false
     python: "3.8"
+    env:
       - COMPLETE=true
 
 install:
