--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,17 @@ language: python
 matrix:
   include:
   - os: linux
-    dist: trusty
+    dist: bionic
     python: "3.6"
     env:
       - COMPLETE=false
   - os: linux
-    dist: trusty
+    dist: bionic
     python: "3.7"
     env:
       - COMPLETE=false
   - os: linux
-    dist: trusty
+    dist: bionic
     python: "3.8"
     env:
       - COMPLETE=true
