--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,5 +41,5 @@ sphinx = "^3.0"
 numpydoc = ">= 0.8"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry_core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
